@@ -61,6 +61,8 @@ glibc (2.29-0experimental0) UNRELEASED; urgency=medium
     which are now fixed in both oldstable and stable kernels.
   * debian/rules: drop -no-pie -fno-PIE options. This is now fully supported
     by the GNU libc.
+  * debian/testsuite-xfail-debian.mk: drop XFAILs that have been fixed for
+    quite some time.
 
   [ Sven Mueller ]
   * debian/rules: honor noudeb build profile.
